--- a/styles/home.css
+++ b/styles/home.css
@@ -16,11 +16,12 @@ header{
     grid-area: left;
 
     background: url('/assets/home-bg-img.svg') no-repeat top/contain;
+    background-position-x: -10rem;
 }
 
 main{
     grid-area: right;
-
+    margin-top: -12rem;
     display: flex;
     align-items: center;
 }
@@ -44,4 +45,25 @@ input{
 input, button, .button{
     width: 100%;
     margin-bottom: 1.8rem;
+}
+
+/* separator */
+.separator {
+    display: flex;
+    align-items: center;
+}
+
+.separator div:nth-child(2) {
+    color: var(--grey-blue);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    padding: 0 1.35rem;
+    line-height: 0;
+}
+
+.separator div:nth-child(1),
+.separator div:nth-child(3) {
+    background-color: var(--grey-blue);
+    width: 100%;
+    height: 1px;
 }
