--- a/styles/home.css
+++ b/styles/home.css
@@ -67,3 +67,26 @@ input, button, .button{
     width: 100%;
     height: 1px;
 }
+
+/* create balls */
+.ball{
+    width: 21.2rem;
+    height: 21.2rem;
+    background: var(--blue);
+    clip-path: circle();
+    opacity: 0.1;
+
+    position: fixed;
+}
+
+.ball.top{
+    top: -46rem;
+    width: 63.3rem;
+    right: -35rem;
+    height: 63.3rem;
+}
+
+.ball.bottom{
+    bottom: -15rem;
+    right: 5.6rem
+}
