--- a/styles/room.css
+++ b/styles/room.css
@@ -3,7 +3,7 @@
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 #room header .buttons {
@@ -12,6 +12,7 @@
 
 #room header .buttons .button:nth-child(1) {
     margin-right: .8rem;
+    padding: 1.3rem 1.6rem;
 }
 
 #room header .buttons .button:nth-child(1) img {
