--- a/styles/room.css
+++ b/styles/room.css
@@ -29,3 +29,55 @@
     width: 2rem;
     height: 2rem;
 }
+
+/*** QUESTION FORM ***/
+#question-form h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 2.8rem;
+    color: var(--black);
+    font-weight: 700;
+    margin-bottom: 2.4rem;
+    line-height: 4.2rem;
+}
+
+#question-form form {
+    border: .2rem solid var(--grey-blue);
+    padding: 1.6rem;
+    border-radius: 0 .8rem .8rem .8rem;
+}
+
+#question-form form textarea {
+    resize: none;
+    background: transparent;
+    outline: none;
+    width: 100%;
+}
+
+#question-form form textarea:placeholder {
+    color: var(--grey-blue);
+}
+
+#question-form form footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#question-form form footer > div {
+    display: flex;
+    align-items: center;
+    color: var(--icons-details);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 1.4rem;
+}
+
+#question-form form footer > div img {
+    margin-right: .9rem;
+}
+
+#question-form form footer button {
+    height: auto;
+    padding: .8rem 2.4rem;
+    line-height: 2.4rem;
+}
