--- a/styles/global.css
+++ b/styles/global.css
@@ -18,6 +18,7 @@ html{
 
     --grey-dark: #4D5E77;
     --grey-blue: #A1B2CD;
+    --grey-medium: #EAECF2;
     --grey-light:#E5EAF1;
 
     /* 1rem = 16px (User Agent) = 100% (User Agent) */
