--- a/styles/room.css
+++ b/styles/room.css
@@ -123,3 +123,12 @@
 .question-wrapper .actions > a + a {
     margin-left: 2.4rem;
 }
+
+/*** Question Read ***/
+.question-wrapper.read {
+    background: var(--grey-medium);
+}
+
+.question-wrapper.read .question-content .user {
+    background: var(--grey-blue);
+}
