--- a/src/view/room.ejs
+++ b/src/view/room.ejs
@@ -14,6 +14,9 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <!-- SCRIPT -->
+    <script src="scripts/main.js" defer type="module"></script>
 </head>
 <body>
     <div id="room" class="content">
