--- a/src/view/room.ejs
+++ b/src/view/room.ejs
@@ -151,7 +151,7 @@
                 <input type="password" name="password" id="password" placeholder="Digite sua senha admin">
 
                 <div class="buttons">
-                    <div class="button grey">Cancelar</div>
+                    <div class="button grey cancel">Cancelar</div>
                     <button class="red">Sim, excluir</button>
                 </div>
             </form>
