--- a/src/view/room.ejs
+++ b/src/view/room.ejs
@@ -24,7 +24,7 @@
             <img src="images/logo.svg" alt="Rocket.Q Logo">
 
             <div class="buttons">
-                <div class="button outlined">
+                <div class="button outlined" id="room-id" data-id="323243">
                     #323243
                     <img src="images/copy.svg" alt="Copiar número da sala">
                 </div>
@@ -38,7 +38,7 @@
         <main>
             <section id="question-form">
                 <h2>Faça sua pergunta</h2>
-                <form action="">
+                <form action="#" method="POST">
                     <label class="sr-only" for="question">O que você quer perguntar?</label>
                     <textarea name="question" placeholder="O que você quer perguntar?" id="question"></textarea>
 
@@ -65,11 +65,11 @@
                             </div>
                         </div>
                         <div class="actions">
-                            <a href="#" class="check">
+                            <a href="#" class="check" data-id="2">
                                 <img src="images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
-                            <a href="#" class="delete">
+                            <a href="#" class="delete" data-id="2">
                                 <img src="images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
@@ -88,11 +88,11 @@
                             </div>
                         </div>
                         <div class="actions">
-                            <a href="#" class="check">
+                            <a href="#" class="check" data-id="3">
                                 <img src="images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
-                            <a href="#" class="delete">
+                            <a href="#" class="delete" data-id="3">
                                 <img src="images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
@@ -109,11 +109,11 @@
                             </div>
                         </div>
                         <div class="actions">
-                            <a href="#" class="check">
+                            <a href="#" class="check" data-id="4">
                                 <img src="images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
-                            <a href="#" class="delete">
+                            <a href="#" class="delete" data-id="4">
                                 <img src="images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="actions">
-                            <a href="#" class="delete">
+                            <a href="#" class="delete" data-id="1">
                                 <img src="images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
@@ -146,7 +146,7 @@
         <div class="modal">
             <h2>Excluir pergunta</h2>
             <p>Tem certeza que você deseja excluir esta pergunta?</p>
-            <form action="">
+            <form action="#" method="POST">
                 <label class="sr-only" for="password">Digite sua senha admin</label>
                 <input type="password" name="password" id="password" placeholder="Digite sua senha admin">
 
