Realizadas correções na rota e criada rota

--- a/src/view/parts/enter-room.ejs
+++ b/src/view/parts/enter-room.ejs
@@ -4,7 +4,7 @@
         <label class="sr-only" for="room-id">Código da sala</label>
         <input type="text" id="room-id">
         <button>
-            <img src="images/enter-room.svg" alt="Entrar na sala">
+            <img src="/images/enter-room.svg" alt="Entrar na sala">
             Entrar na sala
         </button>
     </form>
@@ -19,7 +19,7 @@
 <section>
     <h2>Crie sua própria sala de forma fácil</h2>
     <a href="/create-pass" class="button outlined">
-        <img src="images/users.svg" alt="Criar Sala"> 
+        <img src="/images/users.svg" alt="Criar Sala"> 
         Criar Sala                      
     </a>
 </section>
