--- a/src/view/parts/create-pass.ejs
+++ b/src/view/parts/create-pass.ejs
@@ -1,11 +1,11 @@
 
 <section>
     <h2>Crie sua própria sala</h2>
-    <form>
+    <form action="/room/create-room">
         <label class="sr-only" for="room-pass">Insira uma senha</label>
         <input type="password" id="room-pass" placeholder="Insira uma senha">
         <button>
-            <img src="images/enter-room.svg" alt="Entrar na sala">
+            <img src="/images/enter-room.svg" alt="Entrar na sala">
             Criar Sala
         </button>
     </form>
