--- a/src/view/room.ejs
+++ b/src/view/room.ejs
@@ -7,29 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- styles -->
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/room.css">
-    <link rel="stylesheet" href="styles/modal.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/room.css">
+    <link rel="stylesheet" href="/styles/modal.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- SCRIPT -->
-    <script src="scripts/main.js" defer type="module"></script>
+    <script src="/scripts/main.js" defer type="module"></script>
 </head>
 <body>
     <div id="room" class="content">
         <header>
-            <img src="images/logo.svg" alt="Rocket.Q Logo">
+            <a href="/">
+                <img src="/images/logo.svg" alt="Rocket.Q Logo">
+            </a>
 
             <div class="buttons">
                 <div class="button outlined" id="room-id" data-id="323243">
                     #323243
-                    <img src="images/copy.svg" alt="Copiar número da sala">
+                    <img src="/images/copy.svg" alt="Copiar número da sala">
                 </div>
                 <a href="#" class="button">
-                    <img src="images/users-white.svg" alt="Criar uma sala">
+                    <img src="/images/users-white.svg" alt="Criar uma sala">
                     Criar Sala
                 </a>
             </div>
@@ -44,7 +46,7 @@
 
                     <footer>
                         <div>
-                            <img src="images/lock.svg" alt="cadeado">
+                            <img src="/images/lock.svg" alt="cadeado">
                             Esta pergunta é anônima
                         </div>
                         <button>Enviar</button>
@@ -58,7 +60,7 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="images/user.svg" alt="avatar">
+                                <img src="/images/user.svg" alt="avatar">
                             </div>
                             <div class="question">
                                 <p>Qual a diferença entre const, var e let no JavaScript?</p>
@@ -66,11 +68,11 @@
                         </div>
                         <div class="actions">
                             <a href="#" class="check" data-id="2">
-                                <img src="images/check.svg" alt="Marcar como lida">
+                                <img src="/images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
                             <a href="#" class="delete" data-id="2">
-                                <img src="images/trash.svg" alt="Excluir">
+                                <img src="/images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
@@ -79,7 +81,7 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="images/user.svg" alt="avatar">
+                                <img src="/images/user.svg" alt="avatar">
                             </div>
                             <div class="question">
                                 <p>
@@ -89,11 +91,11 @@
                         </div>
                         <div class="actions">
                             <a href="#" class="check" data-id="3">
-                                <img src="images/check.svg" alt="Marcar como lida">
+                                <img src="/images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
                             <a href="#" class="delete" data-id="3">
-                                <img src="images/trash.svg" alt="Excluir">
+                                <img src="/images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
@@ -102,7 +104,7 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="images/user.svg" alt="avatar">
+                                <img src="/images/user.svg" alt="avatar">
                             </div>
                             <div class="question">
                                 <p>O que é JavaScript?</p>
@@ -110,11 +112,11 @@
                         </div>
                         <div class="actions">
                             <a href="#" class="check" data-id="4">
-                                <img src="images/check.svg" alt="Marcar como lida">
+                                <img src="/images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
                             <a href="#" class="delete" data-id="4">
-                                <img src="images/trash.svg" alt="Excluir">
+                                <img src="/images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
@@ -123,7 +125,7 @@
                     <div class="question-wrapper read">
                         <div class="question-content">
                             <div class="user">
-                                <img src="images/user.svg" alt="avatar">
+                                <img src="/images/user.svg" alt="avatar">
                             </div>
                             <div class="question">
                                 <p>O que é TypeScript?</p>
@@ -131,7 +133,7 @@
                         </div>
                         <div class="actions">
                             <a href="#" class="delete" data-id="1">
-                                <img src="images/trash.svg" alt="Excluir">
+                                <img src="/images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
